# back-tester-2026

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CMakeLists.txt  PR_BODY.md  README.md  build_profiling.sh  convert_to_feather.py  profile_all_strategies.sh  profile_standard.sh  run  start
benchmark/: CMakeLists.txt  MergerBench.cpp
hw_1_vassilyev/: CMakeLists.txt  MarketDataEvent.hpp  README.md  main.cpp
rust/: Cargo.toml
rust/src/: dispatcher.rs  lib.rs  main.rs  model.rs  orderbook.rs  parser.rs  processor.rs
rust/tests/: dispatcher_tests.rs  integration_tests.rs  lob_integration_tests.rs  model_tests.rs  orderbook_tests.rs  parsing_tests.rs
src/: CMakeLists.txt  hard_task2.cpp  main.cpp  standard_task.cpp  standard_task2.cpp
src/app/: AppConfig.hpp  ArgsParser.cpp  ArgsParser.hpp
src/backtest/: BacktestMetrics.cpp  BacktestMetrics.hpp  BacktestReport.cpp  BacktestReport.hpp  BacktestTypes.hpp  CMakeLists.txt  ExecutionSimulator.cpp  ExecutionSimulator.hpp  MarketView.cpp  MarketView.hpp  OrderManager.cpp  OrderManager.hpp  Portfolio.cpp  Portfolio.hpp  SimulatedOrder.hpp  StrategyAction.hpp  as_main.cpp
src/book/: BookManager.cpp  BookManager.hpp  BookSnapshot.hpp  LimitOrderBook.cpp  LimitOrderBook.hpp
src/common/: BasicTypes.hpp  BlockingQueue.hpp  CMakeLists.txt  Dispatcher.cpp  Dispatcher.hpp  Dummy.cpp  EventConsumer.cpp  EventConsumer.hpp  EventParser.cpp  EventParser.hpp  Events.hpp  IngestionPipeline.hpp  JsonLineParser.cpp  JsonLineParser.h  LimitOrderBook.cpp  LimitOrderBook.h  LimitOrderBook.hpp  LockFreeQueue.hpp  MarketDataDispatcher.cpp  MarketDataDispatcher.hpp  MarketDataEvent.cpp  MarketDataEvent.h  MarketDataEvent.hpp  MarketDataParser.cpp  MarketDataParser.hpp  MdEnums.hpp  MergeStrategies.hpp  NativeDataParser.hpp  OrderState.hpp  Parser.cpp  Parser.hpp  Pipeline.hpp  PriceUtils.hpp  Queue.hpp  SpscAsyncQueue.hpp  SpscQueue.hpp  Summary.cpp  Summary.h  TimeUtils.hpp  enums.hpp  (+1 more)
src/concurrency/: NonBlockingQueue.hpp
src/data_ingestion/: CMakeLists.txt  MarketDataEvent.hpp  README.md  SimpleLoader.hpp  simple_loader_main.cpp
src/data_layer/: EventFlatMerger.hpp  EventHierarchyMerger.hpp  JsonMarketDataFolderLoader.cpp  JsonMarketDataFolderLoader.hpp  JsonParser.hpp  Producer.hpp
src/dispatch/: CMakeLists.txt  Dispatcher.hpp  Dummy.cpp  EventSink.hpp  LobRegistry.hpp  ShardedDispatcher.hpp  SnapshotSink.hpp
src/dispatcher/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.hpp  ShardedDispatcher.cpp  ShardedDispatcher.hpp  SnapshotWorker.cpp  SnapshotWorker.hpp
src/domain/: LimitOrderBook.cpp  LimitOrderBook.hpp  LimitOrderBookSingleInstrument.cpp  LimitOrderBookSingleInstrument.hpp  LobsServingThread.cpp  LobsServingThread.hpp  MarketDataEvent.cpp  MarketDataEvent.hpp  Snapshotter.cpp  Snapshotter.hpp
src/ingest/: BlockingQueue.hpp  CMakeLists.txt  FolderIngest.cpp  FolderIngest.hpp  MboDecoder.cpp  MboDecoder.hpp  NdjsonReader.cpp  NdjsonReader.hpp
src/ingestion/: CMakeLists.txt  DataIngestion.cpp  DataIngestion.hpp  EventQueue.hpp  FlatMerger.cpp  FlatMerger.hpp  HierarchyMerger.cpp  HierarchyMerger.hpp  JsonLineParser.hpp  L3FileReader.cpp  L3FileReader.hpp  NanosParser.hpp  Producer.cpp  Producer.hpp  README.md  SimpleDataParser.cpp  SimpleDataParser.hpp  ThreadSafeQueue.hpp
src/io/: FeatherEventReader.cpp  FeatherEventReader.hpp  MmapFile.cpp  MmapFile.hpp
src/lob/: BookDispatcher.cpp  BookDispatcher.hpp  CMakeLists.txt  InstrumentBookRegistry.cpp  InstrumentBookRegistry.hpp  LimitOrderBook.cpp  LimitOrderBook.hpp  Lob.cpp  Lob.hpp  LobHandler.cpp  LobHandler.hpp  OrderEntry.hpp  OrderIndex.cpp  OrderIndex.hpp  PriceLevel.cpp  PriceLevel.hpp  README.md  lob_main.cpp
src/main/: CMakeLists.txt  DataIngestionLayer.cpp  DataIngestionLayer.hpp  Dispatcher.cpp  Dispatcher.hpp  EventCollector.cpp  EventCollector.hpp  EventParser.cpp  EventParser.hpp  FileReader.cpp  FileReader.hpp  FlatMerger.cpp  HierarchyMerger.cpp  IngestionRunner.cpp  IngestionRunner.hpp  LimitOrderBook.cpp  LimitOrderBook.hpp  LineReader.cpp  LineReader.hpp  LobRouter.cpp  LobRouter.hpp  MarketData.hpp  MarketDataEvent.cpp  MarketDataEvent.hpp  MdEventConverter.cpp  MdEventConverter.hpp  Merger.hpp  OrderBook.hpp  PerfStats.hpp  PipelineRunner.cpp  PipelineRunner.hpp  PresentToUser.cpp  PresentToUser.hpp  Reporting.cpp  Reporting.hpp  SnapshotWriter.cpp  SnapshotWriter.hpp  ThreadSafeQueue.hpp  main.cpp  main_legacy.c1pp  (+2 more)
src/main2/: CMakeLists.txt  PipelineApp.cpp  PipelineApp.hpp  main.cpp
src/market_data/: ArrowFeatherSource.cpp  ArrowFeatherSource.hpp  CMakeLists.txt  Consumer.cpp  Consumer.hpp  EventSource.hpp  FileProducer.cpp  FileProducer.hpp  HardTask.cpp  HardTask.hpp  MappedFile.cpp  MappedFile.hpp  MarketDataEvent.cpp  MarketDataEvent.hpp  Merger.cpp  Merger.hpp  MmapMboSource.cpp  MmapMboSource.hpp  PositionalMboParser.cpp  PositionalMboParser.hpp  SpscRingQueue.hpp  TimestampParser.cpp  TimestampParser.hpp
src/merge/: CMakeLists.txt  Dummy.cpp  HeapMerger.hpp  LinearScanMerger.hpp  LoserTreeMerger.hpp
src/models/: MarketDataEvent.h
src/order_book/: AbseilOrderBook.cpp  AbseilOrderBook.hpp  CMakeLists.txt  (+12 more)
task2_hard/: .gitignore  CMakeLists.txt  README.md
test/: BasicTypesTest.cpp  BookDispatcherTest.cpp  CMakeLists.txt  ConsumerTest.cpp  DataIngestionTest.cpp  DispatcherTest.cpp  EventCollectorTest.cpp  EventQueueTest.cpp  FileMarketDataSourceTest.cpp  FolderIngestTest.cpp  FolderMarketDataSourceTest.cpp  HardTaskTest.cpp  InstrumentBookRegistryTest.cpp  IntegrationPipelineTest.cpp  LimitOrderBookTest.cpp  LobHandlerTest.cpp  LobTest.cpp  MappedFileTest.cpp  MarketDataEventTest.cpp  MarketDataParserTest.cpp  MdPipelineBenchmark.cpp  MergerTest.cpp  MmapMboSourceTest.cpp  NdjsonReaderTest.cpp  OrderBookRouterTest.cpp  OrderBookTest.cpp  OrderIndexTest.cpp  PipelineAppTest.cpp  PositionalMboParserTest.cpp  ShardedDispatcherTest.cpp  SnapshotterTest.cpp  SpscAsyncQueueTest.cpp  SpscRingQueueTest.cpp  StatisticsTest.cpp  TempFile.hpp  ThreadMarketDataSourceTest.cpp  TimestampParserTest.cpp  test_parser.cpp  test_summary.cpp
(+228 files in other folders)
